SP 3/production/landing-pages/rule-ingress-nginx.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: landing-page-ingress
  namespace: production
  annotations:
    ## Untuk menaikan batas upload file
    nginx.org/client-max-body-size: "10m"
    ## Memaksa jalan di https
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: farid.sdcilsy-beta.my.id
      http:
        paths:
          #- path: /belajar
          - backend:
              serviceName: landing-page
              servicePort: 80
